--- a/README
+++ b/README
@@ -1,5 +1,7 @@
-Information about folder's organization:
-- msrs : has the code to access pocketsphinx decoder
-- pocketsphinx, sphinxbase: files from CMUsphinx project to build the decoder libraries, full sources can be downloaded from http://cmusphinx.sourceforge.net/wiki/download/
-- QtSpeech, test_pocketsphinx: project for speech testing. Will be removed in comming days
-- SpeechMe: Qt application that uses msrs and pocketsphinx for speech recognition
+# Speech Me!
+## Information about folder's organization:
+
+* msrs : has the code to access pocketsphinx decoder
+* pocketsphinx, sphinxbase: files from CMUsphinx project to build the decoder libraries, full sources can be downloaded from http://cmusphinx.sourceforge.net/wiki/download/
+* QtSpeech, test_pocketsphinx: project for speech testing. Will be removed in comming days
+* SpeechMe: Qt application that uses msrs and pocketsphinx for speech recognition
